--- a/Core/Translation/eu_ES.json
+++ b/Core/Translation/eu_ES.json
@@ -306,6 +306,7 @@
     "component": "Osagaia",
     "concept": "Kontzeptua",
     "conditions": "Baldintzak",
+    "configuration": "Konfigurazioa",
     "configure": "Konfiguratu",
     "configure-columns": "Zutabe konfiguratzailea",
     "confirm": "Baieztatu",
