--- a/Core/Translation/fr_FR.json
+++ b/Core/Translation/fr_FR.json
@@ -306,6 +306,7 @@
     "component": "Composant",
     "concept": "Concept",
     "conditions": "Conditions",
+    "configuration": "Configuration",
     "configure": "Configurer",
     "configure-columns": "Configurateur de colonne",
     "confirm": "Confirmer",
@@ -591,7 +592,7 @@
     "es-tax-exception-e6": "Espagne: exception pour une autre raison",
     "es-tax-exception-location-rules": "règles d'exception fiscales espagnoles",
     "es-tax-exception-n1": "Exception fiscale ES N1",
-    "es-tax-exception-n5": "es-tax-exception-n5",
+    "es-tax-exception-n5": "Exception fiscale N5",
     "es-tax-exception-passive-subject": "sujet passif d'exception fiscale",
     "es-tax-regime-agrarian": "Régime spécial de l'agriculture, de l'élevage et de la pêche",
     "es-tax-regime-cash-criteria": "Critère de caisse",
@@ -1416,7 +1417,7 @@
     "sdk": "SDK",
     "search": "Chercher",
     "search-document": "Entrez le numéro du\/de la %doctype% à rechercher.",
-    "search-in-all-pages": "Busca en todas las páginas del programa",
+    "search-in-all-pages": "Rechercher dans toutes les pages du programme",
     "search-message": "Message de recherche",
     "search-product": "Rechercher un produit",
     "second-hand": "Seconde main",
