--- a/Core/Translation/gl_ES.json
+++ b/Core/Translation/gl_ES.json
@@ -306,6 +306,7 @@
     "component": "Compoñente",
     "concept": "Concepto",
     "conditions": "Condicións",
+    "configuration": "Configuración",
     "configure": "Configurar",
     "configure-columns": "Configurador de columnas",
     "confirm": "Confirmar",
