--- a/Core/Translation/it_IT.json
+++ b/Core/Translation/it_IT.json
@@ -306,6 +306,7 @@
     "component": "Componente",
     "concept": "Concetto",
     "conditions": "Condizioni",
+    "configuration": "Configurazione",
     "configure": "Configurare",
     "configure-columns": "Configuratore colonne",
     "confirm": "Confermare",
