--- a/Core/Translation/pl_PL.json
+++ b/Core/Translation/pl_PL.json
@@ -306,6 +306,7 @@
     "component": "Komponent",
     "concept": "Koncepcja",
     "conditions": "Warunki",
+    "configuration": "Konfiguracja",
     "configure": "Konfigurować",
     "configure-columns": "Konfigurator kolumn",
     "confirm": "Potwierdzić",
