--- a/Core/Translation/pt_BR.json
+++ b/Core/Translation/pt_BR.json
@@ -306,6 +306,7 @@
     "component": "Componente",
     "concept": "Conceito",
     "conditions": "Condições",
+    "configuration": "Configuração",
     "configure": "Configurar",
     "configure-columns": "Configurador de colunas",
     "confirm": "Confirmar",
