--- a/Core/Translation/pt_PT.json
+++ b/Core/Translation/pt_PT.json
@@ -93,7 +93,7 @@
     "allow-sale-without-stock-n": "Permitir venda sem estoque nos novos produtos",
     "allow-update": "Permitir MODIFICAR",
     "already-installed": "Já instalado",
-    "already-installed-p": "El programa ya está instalado",
+    "already-installed-p": "O programa já está instalado",
     "always-to-company-email": "Sempre para o email da empresa",
     "amount": "Montante",
     "amount-without-discount": "Preço sem desconto",
@@ -231,7 +231,7 @@
     "center": "Centro",
     "certificate": "Certificado",
     "change": "mudança",
-    "change-password-online-warning": "Si esta instalación va a estar online, debería cambiar la contraseña por una más segura.",
+    "change-password-online-warning": "Se esta instalação vai estar online, deve alterar a palavra-passe para uma mais segura.",
     "channel": "Canal",
     "charge": "Cobrar",
     "charge-date": "Data de cobrança",
@@ -306,6 +306,7 @@
     "component": "Componente",
     "concept": "Conceito",
     "conditions": "Condições",
+    "configuration": "Configuração",
     "configure": "Configurar",
     "configure-columns": "Configurar colunas",
     "confirm": "confirme",
