--- a/Core/Translation/va_ES.json
+++ b/Core/Translation/va_ES.json
@@ -306,6 +306,7 @@
     "component": "Component",
     "concept": "Concepte",
     "conditions": "Condicions",
+    "configuration": "Configuració",
     "configure": "Configurar",
     "configure-columns": "Configurador de columnes",
     "confirm": "Confirmar",
