--- a/Core/Translation/es_GT.json
+++ b/Core/Translation/es_GT.json
@@ -306,6 +306,7 @@
     "component": "Componente",
     "concept": "Concepto",
     "conditions": "Condiciones",
+    "configuration": "Configuración",
     "configure": "Configurar",
     "configure-columns": "Configurador de columnas",
     "confirm": "Confirmar",
